Ce la faranno i nostri eroi?

--- a/dicono_di_noi.html
+++ b/dicono_di_noi.html
@@ -2,11 +2,11 @@
 <html lang="it">
 	<head>
 		<meta charset="utf-g">
- 		<meta name-"description" content="Breve presentazione dei creatori di TripMsuic"> <!-- da inserire max 100 caratteri --> <!-- Non lo so se per ogni pagina deve essere diversa, l'articolo non lo specificava-->
+ 		<meta name-"description" content="Breve presentazione delle recensioni ottenute sui social"> <!-- da inserire max 100 caratteri --> <!-- Non lo so se per ogni pagina deve essere diversa, l'articolo non lo specificava-->
  		<meta name-"robots" content="index, follow">
  		<meta name="author" content="Micaela Sgambetterra e Arianna Vinci">
 		<link rel="icon" type="image/png" sizes="32x32" href="images/logotipo.png">  <!-- questa è l icona che compare nel tab -->
-		<link rel="stylesheet" type="text/css" href="css/style_chisiamo.css">
+		<link rel="stylesheet" type="text/css" href="css/style_diconodinoi.css">
 		<link rel="stylesheet"  href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> <!--da qui-->
  		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
  		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -42,19 +42,26 @@
 			<h1 id="titolo">DICONO DI NOI</h1>
 			<section class="contenuti">
 				<section class="row">
-					<section class="col-md-3 col-sm-6">
-						<img  src="images/recensione1.jpeg" alt="foto recensione" style="width:20vw;height:30vh;" />
+					<section class="sopra" class="col-md-6 col-sm-6">
+						<img  src="images/recensione1.jpeg" alt="foto recensione" style="width:20vw;height:20vh;" />
 					</section>
-					<section class="col-md-3 col-sm-6">
-						<img  src="images/recensione2.jpeg" alt="foto recensione" style="width:20vw;height:35vh;" />
+					<section class="sopra" class="col-md-6 col-sm-6">
+						<img  src="images/recensione2.jpeg" alt="foto recensione" style="width:20vw;height:20vh;" />
 					</section>
-					<section class="col-md-3 col-sm-6">
-						<img  src="images/recensione1.jpeg" alt="foto recensione" style="width:20vw;height:30vh;" />
+					<section class="sopra" class="col-md-6 col-sm-6">
+						<img  src="images/recensione3.jpeg" alt="foto recensione" style="width:20vw;height:20vh;" />
 					</section>
-					<section class="col-md-3 col-sm-6">
-						<img  src="images/recensione2.jpeg" alt="foto recensione" style="width:20vw;height:35vh;" />
+					<section  class="sotto" class="col-md-6 col-sm-6">
+						<img  src="images/recensione4.jpeg" alt="foto recensione" style="width:20vw;height:20vh;" />
+					</section>
+					<section class="sotto" class="col-md-6 col-sm-6">
+						<img  src="images/recensione5.jpeg" alt="foto recensione" style="width:20vw;height:20vh;" />
+					</section>
+					<section class="sotto" class="col-md-6 col-sm-6">
+						<img  src="images/recensione6.jpeg" alt="foto recensione" style="width:20vw;height:20vh;" />
 					</section>
 				</section>
+			</section>
 		</main> 				
 		<footer>
 	 		<section id="testofooter" class="row row-cols-sm-6 row-cols-md-3"/>
